bebytes/tests/compile_time/enums/data_variants.stderr
error: BeBytes does not support enums with tuple variants. Use unit variants only.
  --> tests/compile_time/enums/data_variants.rs:10:5
   |
10 |     Tuple(u32),
   |     ^^^^^

error: BeBytes does not support enums with struct variants. Use unit variants only.
  --> tests/compile_time/enums/data_variants.rs:11:5
   |
11 |     Struct { field: u16 },
   |     ^^^^^^

error[E0732]: `#[repr(inttype)]` must be specified
 --> tests/compile_time/enums/data_variants.rs:7:1
  |
7 | enum DataVariants {
  | ^^^^^^^^^^^^^^^^^
